# wordle_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: cargo.yml
proptest-regressions/: perf.txt  stats.txt
src/: harness.rs  lib.rs  mock.rs  perf.rs  stats.rs  strategy.rs  wasm_rt.rs  words.rs
src/harness/: mod.rs  wasm.rs
src/strategy/: mod.rs  stupid.rs  wrapper.rs
wordle_perf/: Cargo.toml
wordle_perf/src/: harness.rs  lib.rs  words.rs
wordle_perf/src/strategy/: mod.rs
wordle_rs_macro/: Cargo.toml  README.md  release.toml
wordle_rs_macro/src/: lib.rs
wordle_runner/: Cargo.toml  release.toml
wordle_runner/src/: main.rs
wordle_strategies/: Cargo.toml  README.md  basic.txt  release.toml
wordle_strategies/src/: lib.rs  main.rs  util.rs  wasm.rs
wordle_strategies/src/strategies/: basic.rs  common.rs  common_easy.rs  mod.rs  narrowing.rs  stupid.rs
