[workspace]
members = [
    "wordle_strategies",
    "wordle_runner"
]

[package]
name = "wordle_rs"
version = "0.1.2"
edition = "2021"
authors = ["cgm616 <cargo@cgm616.me>"]
rust-version = "1.58"
description = "Tools to build and test Wordle strategies"
repository = "https://github.com/cgm616/wordle_rs/"
license = "MIT"
keywords = ["wordle", "word", "game", "testing", "strategy"]
categories = ["simulation"]
readme = "README.md"

[features]
default = ["serde", "stats", "fancy", "parallel"]
serde = ["serde_crate", "serde_json"]
stats = ["fishers_exact", "statrs", "num-traits"]
fancy = ["comfy-table", "owo-colors", "indicatif"]
parallel = ["rayon", "indicatif/rayon"]

[dependencies]
comfy-table = { version = "5.0", optional = true }
either = "1.6.1"
fishers_exact = { version = "1.0.1", optional = true }
indicatif = {version = "0.16", optional = true}
itertools = "0.10.3"
num-traits = { version = "0.2.14", optional = true }
owo-colors = { version = "3.2.0", features = ["supports-colors"], optional = true }
rand = "0.8"
rayon = { version = "1.5.1", optional = true }
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
statrs = { version = "0.15.0", optional = true }
thiserror = "1.0.30"

[dev-dependencies]
proptest = "1.0.0"
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true