[workspace]
members = [
    "wordle_strategies",
    "wordle_runner",
]

[package]
name = "wordle_rs"
version = "0.2.0"
edition = "2021"
authors = ["cgm616 <cargo@cgm616.me>"]
rust-version = "1.58"
description = "Tools to build and test Wordle strategies"
repository = "https://github.com/cgm616/wordle_rs/"
license = "MIT"
keywords = ["wordle", "word", "game", "testing", "strategy"]
categories = ["simulation"]
readme = "README.md"

[features]
default = ["serde", "stats", "fancy", "parallel"]
serde = ["serde_crate", "serde_json"]
stats = ["fishers_exact", "statrs", "num-traits"]
fancy = ["comfy-table", "owo-colors", "indicatif"]
parallel = ["rayon", "indicatif/rayon"]

[dependencies]
either = "1.6.1"
itertools = "0.10.3"
thiserror = "1.0.30"
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
comfy-table = { version = "5.0", optional = true }
rayon = { version = "1.5.1", optional = true }
serde_json = { version = "1.0", optional = true }
rmp-serde = "1.0.0"
statrs = { version = "0.15.0", optional = true }
rand = "0.8"
num-traits = { version = "0.2.14", optional = true }
owo-colors = { version = "3.2.0", features = ["supports-colors"], optional = true }
indicatif = {version = "0.16", optional = true}
fishers_exact = { version = "1.0.1", optional = true }
wasmer = "2.1.1"

[dev-dependencies]
proptest = "1.0.0"
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
