[package]
name = "wordle_rs_macro"
version = "0.2.0"
edition = "2021"
authors = ["cgm616 <cargo@cgm616.me>"]
rust-version = "1.58"
description = "Procedural macros for `wordle_rs`"
repository = "https://github.com/cgm616/wordle_rs/"
license = "MIT"
keywords = ["wordle", "word", "game", "testing", "strategy"]
categories = ["simulation"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false, features = ["derive", "parsing", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0.36"
