[package]
name = "wordle_runner"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wordle_strategies = {path = "../wordle_strategies", version = "0.1.0-dev"}
wordle_perf = {path = "../wordle_perf", version = "0.1.0-dev"}
