[package]
name = "wordle_runner"
version = "0.1.0"
edition = "2021"
authors = ["cgm616 <cargo@cgm616.me>"]
rust-version = "1.58"
description = "A command-line tool for running Wordle strategies"
repository = "https://github.com/cgm616/wordle_rs/"
license = "MIT"
keywords = ["wordle", "word", "game", "testing", "strategy"]
categories = ["simulation"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
wordle_rs = { version = "0.2", path = "../" }
wordle_strategies = { version = "0.2", path = "../wordle_strategies" }
