[package]
name = "wordle_strategies"
version = "0.1.1"
edition = "2021"
authors = ["cgm616 <cargo@cgm616.me>"]
rust-version = "1.58"
description = "Some Wordle strategies built with wordle_rs"
repository = "https://github.com/cgm616/wordle_rs/"
license = "MIT"
keywords = ["wordle", "word", "game", "testing", "strategy"]
categories = ["simulation"]
readme = "../README.md"

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
regex = "1.5"
wordle_rs = { version = "0.1", path = "../" }
